<?xml version="1.0" encoding="utf-8"?>
<ScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<android.support.v7.widget.LinearLayoutCompat
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">


    <TextView
        android:id="@+id/guide0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="20dp"
        android:shadowColor="#1D1B1B"
        android:text="@string/guide0"
        android:textColor="#000000"
        android:fontFamily="sans-serif-black"
        android:textSize="25sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/guide1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/guide1"
        android:layout_margin="20dp"
        android:textColor="#000000"
        android:fontFamily="sans-serif-condensed-medium"
        android:textSize="20sp"
        android:layout_gravity="left"/>

    <TextView
        android:id="@+id/guide2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_margin="20dp"
        android:textSize="20sp"
        android:text="@string/guide2"
        android:fontFamily="sans-serif-condensed-medium"
        android:textColor="#000000" />

    <TextView
        android:id="@+id/guide3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/guide3"
        android:layout_margin="20dp"
        android:textSize="20sp"
        android:textColor="#000000"
        android:fontFamily="sans-serif-condensed-medium"
        android:layout_gravity="left"/>

    <TextView
        android:id="@+id/guide4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/guide4"
        android:layout_margin="20dp"
        android:textSize="20sp"
        android:textColor="#000000"
        android:fontFamily="sans-serif-condensed-medium"
        android:layout_gravity="left"/>

    <TextView
        android:id="@+id/guide5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/guide5"
        android:layout_margin="20dp"
        android:textSize="20sp"
        android:textColor="#000000"
        android:fontFamily="sans-serif-condensed-medium"
        android:layout_gravity="left"/>

    <TextView
        android:id="@+id/guide6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/guide6"
        android:layout_margin="20dp"
        android:textSize="20sp"
        android:textColor="#000000"
        android:fontFamily="sans-serif-condensed-medium"
        android:layout_gravity="left"/>

    <TextView
        android:id="@+id/guide7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/guide7"
        android:layout_margin="20dp"
        android:textSize="20sp"
        android:textColor="#000000"
        android:fontFamily="sans-serif-condensed-medium"
        android:layout_gravity="left"/>

    <TextView
        android:id="@+id/guide8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/guide8"
        android:layout_margin="20dp"
        android:textSize="20sp"
        android:textColor="#000000"
        android:fontFamily="sans-serif-condensed-medium"
        android:layout_gravity="center_horizontal"/>

    <Button
        android:id="@+id/bcontinue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right|bottom"
        android:layout_marginBottom="5dp"
        android:layout_marginRight="5dp"
        android:text="@string/button_to_scanner"
        android:background="#F5F5DC "
        android:textColor="#000000"/>

</android.support.v7.widget.LinearLayoutCompat>

</ScrollView>