<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#ffffff">


    <TextView
        android:id="@+id/header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/header"
        android:layout_gravity="center_horizontal"
        android:layout_margin="20dp"
        android:textSize="30sp"
        android:textColor="#000000"/>

    <TextView
        android:id="@+id/phone_no_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phone"
        android:layout_gravity="center_horizontal"
        android:textSize="20sp"
        android:layout_marginTop="120dp"
        android:textColor="#000000"/>

    <EditText
        android:id="@+id/phone_no"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="phone"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"/>

    <TextView
        android:id="@+id/psw_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/psw"
        android:textSize="20sp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="40dp"
        android:textColor="#000000"/>

    <EditText
        android:id="@+id/psw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"/>

    <Button
        android:id="@+id/login_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_btn"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="40dp"
        android:background="#F5F5DC"/>

</android.support.v7.widget.LinearLayoutCompat>